--- a/css/styles.css
+++ b/css/styles.css
@@ -5,4 +5,40 @@
   --color-droduct-price: #000;
   --color-button: #ff3400;
   --color-footer: #fff;
+  --color-background: #aaa;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "Inter", sans-serif;
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: var(--color-headings);
+}
+
+h1,
+h3 {
+  color: var(--color-headings);
+}
+
+h1 {
+  font-size: 3rem;
+  /* font-size: 52px; */
+  font-weight: 700;
+}
+
+h2 {
+  color: var(--color-product-name);
+  font-size: 2.6rem;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 1.6rem;
+  font-weight: 600;
 }
