--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,15 @@
   --color-droduct-price: #000;
   --color-button: #ff3400;
   --color-footer: #fff;
-  --color-background: #aaa;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Typography */
 
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 
@@ -19,6 +26,9 @@ body {
   font-size: 1.4rem;
   font-weight: 500;
   color: var(--color-headings);
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 h1,
@@ -39,6 +49,63 @@ h2 {
 }
 
 h3 {
+  font-size: 2.4rem;
+  font-weight: 700;
+}
+
+/* Links */
+
+.link-arrow {
+  text-decoration: none;
+  background-color: var(--color-button);
+  font-size: 1.6rem;
+}
+
+.link-arrow::after {
+  content: "-->";
+  margin-left: 5px;
+  transition: margin 0.15s;
+}
+
+.link-arrow:hover::after {
+  margin-left: 15px;
+}
+
+/* header */
+
+.container {
+  margin-top: 80px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-list {
+  display: flex;
+}
+
+li {
+  list-style: none;
+  margin-left: 3rem;
+}
+
+li > a {
+  text-decoration: none;
+  color: var(--color-headings);
   font-size: 1.6rem;
   font-weight: 600;
+}
+
+@media only screen and (max-width: 767px) {
+  .container {
+    margin-top: 35px;
+    justify-content: center;
+  }
+
+  h3 {
+    font-size: 1.6rem;
+  }
+
+  .nav-list {
+    display: none;
+  }
 }
