--- a/css/styles.css
+++ b/css/styles.css
@@ -182,3 +182,65 @@ li > a {
     align-items: center;
   }
 }
+
+/* create grid */
+
+.grid-layout {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.grid-items {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+}
+
+.grid-item {
+  box-shadow: 0 0 7px grey;
+  border-radius: 5px;
+  padding: 8px;
+  width: 330px;
+  height: 475px;
+}
+
+.grid-img img {
+  width: 100%;
+}
+.grid-heading {
+  margin: 100px 0 30px 0;
+}
+.rating .fas {
+  color: #faa302;
+}
+
+.rating span {
+  margin-left: 8px;
+}
+
+.grid-img {
+  margin-bottom: 16px;
+}
+
+.grid-desc h3 {
+  margin: 10px 0 5px 0;
+}
+
+.grid-desc p {
+  color: var(--color-product-desc);
+  font-size: 14px;
+  margin-top: 5px;
+}
+
+@media only screen and (max-width: 1023px) {
+  .grid-items {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .grid-items {
+    grid-template-columns: 1fr;
+  }
+}
