--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ h3 {
 }
 
 h1 {
-  font-size: 5.2rem;
+  font-size: 5rem;
   font-weight: 700;
 }
 
@@ -67,7 +67,7 @@ h3 {
 }
 
 .link-arrow:hover::after {
-  margin-left: 15px;
+  margin-left: 10px;
 }
 
 /* header */
@@ -92,6 +92,20 @@ li > a {
   color: var(--color-headings);
   font-size: 1.6rem;
   font-weight: 600;
+}
+
+@media only screen and (max-width: 1023px) {
+  h3 {
+    font-size: 20px;
+  }
+
+  li {
+    margin-left: 15px;
+  }
+
+  h1 {
+    font-size: 40px;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -122,10 +136,9 @@ li > a {
 .top-content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   width: 586px;
-  height: 270px;
-  margin-right: 130px;
+  height: 350px;
+  margin-right: 50px;
 }
 
 .top-link {
@@ -154,6 +167,7 @@ li > a {
 
 .top-photo img {
   width: 100%;
+  height: 90%;
 }
 
 @media only screen and (max-width: 1023px) {
@@ -171,15 +185,20 @@ li > a {
   }
 
   .top-photo {
-    width: 257px;
+    width: 300px;
     height: 257px;
+  }
+
+  h1 {
+    font-size: 24px;
   }
 
   .top-content {
     width: 320px;
-    height: 500px;
+    height: 400px;
     margin-right: 0;
     align-items: center;
+    text-align: center;
   }
 }
 
@@ -189,19 +208,20 @@ li > a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .grid-items {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 30px;
+  grid-gap: 25px;
 }
 
 .grid-item {
   box-shadow: 0 0 7px grey;
   border-radius: 5px;
   padding: 8px;
-  width: 330px;
+  width: 325px;
   height: 475px;
 }
 
@@ -234,11 +254,10 @@ li > a {
 }
 
 .grid-button {
-  display: flex;
-  justify-content: center;
-  width: 200px;
+  width: 110px;
   height: 25px;
   margin-top: 50px;
+  margin-left: auto;
 }
 
 .grid-button a {
